@@ -10,6 +10,9 @@
 	  BG IDs to SI IDs, similar to what was in place for SFX. Fixed bug #3600800
 	  "Snow weather effect missing sound effect" and bug #3600838 "Dungeon music
 	  not playing upon entering". Also added weather track for rain (song 4).
+	Rev 7280
+	* mapedit/paledit.cc: Fixed assertion woes, as well as making empty palettes
+	  show as all black instead of random colors.
 
 013-01-12 Dominik Reichardt <dominus@users.sourceforge.net>
 	* configure.ac and all makefile.am files: fixed compiling with current 
